test/e2e/fixtures/tcpmapping-tls-termination-cross-namespace/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tcpmapping-tls-termination-cross-namespace-other
