test/e2e/fixtures/tcpmapping-tls-termination-cross-namespace/queries.json
[
  {
    "url": "/",
    "method": "GET",
    "headers": {
      "Host": "term-xns.example.com"
    },
    "sni": true,
    "insecure": true
  }
]
